--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "zizaco/entrust": "1.4.*"
+        "zizaco/entrust": "1.4.*",
+        "laravel/homestead": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
