--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "zizaco/entrust": "1.4.*",
-        "laravel/homestead": "^2.1"
+        "laravel/homestead": "^2.1",
+        "appzcoder/crud-generator": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -47,6 +48,12 @@
             "php artisan key:generate"
         ]
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/PayBreak/crud-generator"
+        }
+    ],
     "config": {
         "preferred-install": "dist"
     }
