--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "zizaco/entrust": "1.4.*",
         "laravel/homestead": "^2.1",
-        "appzcoder/crud-generator": "dev-master"
+        "appzcoder/crud-generator": "dev-master",
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
