--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,28 @@
 language: php
 
 php:
+  - 5.5.9
   - 5.5
   - 5.6
   - 7.0
   - hhvm
 
+env:
+  global:
+    - setup=basic
+
 matrix:
-  allow_failures:
-    - php: 7.0
   include:
-    - php: 5.5
-      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+    - php: 5.5.9
+      env: setup=lowest
+    - php: 5.5.9
+      env: setup=stable
 
-before_script:
-  - travis_retry composer self-update
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+sudo: false
 
-script:
-  - phpunit --coverage-text --coverage-clover=coverage.clover
+install:
+  - if [[ $setup = 'basic' ]]; then travis_retry composer install --no-interaction --prefer-source; fi
+  - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-stable; fi
+  - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-source --no-interaction --prefer-lowest --prefer-stable; fi
 
-after_script:
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
+script: vendor/bin/phpunit
