--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,9 @@ filter:
     excluded_paths:
         - tests/*
         - database/*
+        - bootstrap/*
+        - config/*
+        -resources/*
 
 checks:
     php:
