--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "zizaco/entrust": "1.4.*",
         "laravel/homestead": "^2.1",
         "appzcoder/crud-generator": "dev-master",
-        "guzzlehttp/guzzle": "^6.0",
-        "wnowicki/generic": "~0.0"
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
