--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,8 +5,7 @@ filter:
         - bootstrap/*
         - config/*
         - resources/*
-build:
-    tests: true
+
 checks:
     php:
         remove_extra_empty_lines: true
@@ -22,3 +21,8 @@ checks:
         fix_line_ending: true
         fix_identation_4spaces: true
         fix_doc_comments: true
+
+tools:
+    external_code_coverage:
+        timeout: 600
+        runs: 3
