--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
         "classmap": [
