--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
