--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
-        ]
+        ],
+        "test": "phpunit"
     },
     "repositories": [
         {
