--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "scrutinizer/ocular": "~1.1"
+        "scrutinizer/ocular": "~1.1",
+        "doctrine/dbal": "~2.4"
     },
     "autoload": {
         "classmap": [
