--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "PayBreak\\Sdk\\": "sdk/"
         }
     },
     "autoload-dev": {
