--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,10 @@ QUEUE_DRIVER=sync
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=dev-437505bf301e428b
+MAIL_PASSWORD=977e74b88bdf2556
 MAIL_ENCRYPTION=null
+MAIL_FROM=basket@paybreak.com
+MAIL_FROM_NAME="Basket System"
 
 BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
