--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/homestead": "^2.1",
         "appzcoder/crud-generator": "dev-master",
         "guzzlehttp/guzzle": "^6.0",
-        "wnowicki/generic": "~0.0"
+        "wnowicki/generic": "~0.0",
+        "erusev/parsedown": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
