--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "appzcoder/crud-generator": "dev-master",
         "guzzlehttp/guzzle": "^6.0",
         "wnowicki/generic": "~0.0",
-        "erusev/parsedown": "^1.5"
+        "erusev/parsedown": "^1.5",
+        "league/csv": "^7.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
