Add footer version
- Altered to .gitignore
- Added version option in footer of page.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ Icon
 # Thumbnails
 ._*
 
+# Version files
+version.json
+/resources/views/includes/page/version.blade.php
+
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
