--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan optimize",
+            "php artisan tag:save",
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
