--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize",
-            "php artisan tag:save",
+            "php artisan tag:save"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
