--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ Icon
 
 # Version files
 version.json
+/resources/views/includes/page/version.blade.php
 
 # Files that might appear on external disk
 .Spotlight-V100
