--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize",
-            "php artisan tag:save"
+            "php artisan optimize"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
