--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ Icon
 ._*
 
 # Version files
-version.json
+/resources/views/includes/page/version.blade.php
 
 # Files that might appear on external disk
 .Spotlight-V100
