Revert "Test banner amendments"
This reverts commit 2a055181c3826c0bab992a39fc025c5b2d2b01de.

--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -22,6 +22,10 @@ sites:
 databases:
     - basket
 
+variables:
+    - key: APP_ENV
+      value: local
+
 # blackfire:
 #     - id: foo
 #       token: bar
