--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,5 @@ MAIL_FROM=basket@paybreak.com
 MAIL_FROM_NAME="Basket System"
 
 BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
+
+# TEST_BANNER_TEXT=This is a test site
