.env.example file amentment

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,4 @@ MAIL_FROM_NAME="Basket System"
 
 BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
 
-# TEST_BANNER_TEXT=This is a test site
+# TEST_BANNER_TEXT="This is a test site"
