Changes made to .env.example
Uncommented variables @srleach

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,6 @@ MAIL_FROM_NAME="Basket System"
 
 BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
 
-#ENV_BANNER_TEXT="This is a test site"
-#ENV_BANNER=true
+ENV_BANNER_TEXT="This is a test site"
+ENV_BANNER=true
 
