Env banner amendments
Changes banner amendments completed @srleach

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,5 @@ MAIL_FROM_NAME="Basket System"
 
 BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
 
-ENV_BANNER_TEXT="This is a test site"
+# ENV_BANNER_TEXT="This is a test site"
 ENV_BANNER=true
-
