--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
 
 # ENV_BANNER_TEXT="This is a test site"
 ENV_BANNER=true
+
+LOG_PREFIX="BasketLog"
+LOG_SYSLOG=true
+LOG_FILE=true
