--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "erusev/parsedown": "^1.5",
         "league/csv": "^7.1",
         "paybreak/paybreak-sdk-php": "^4.0",
-        "paybreak/foundation": "~0.11"
+        "paybreak/foundation": "~0.11",
+        "flynsarmy/db-blade-compiler": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
