--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "post-install-cmd": [
             "php artisan clear-compiled",
             "php artisan optimize",
-            "php artisan tag:save"
+            "php artisan tag:save",
+            "bash scripts/post-install.sh"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
