--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,5 @@ LOG_FILE=true
 EMAIL_TEMPLATE_DEFAULT_REPLY_TO="dev@paybreak.com"
 EMAIL_TEMPLATE_DEFAULT_FROM_NAME="afforditNOW Finance"
 EMAIL_TEMPLATE_DEFAULT_SUBJECT="Your afforditNOW Finance Application"
+
+CACHE_BUST_HASH_SOURCE="VERSION.md"
