--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,5 @@ EMAIL_TEMPLATE_DEFAULT_FROM_NAME="afforditNOW Finance"
 EMAIL_TEMPLATE_DEFAULT_SUBJECT="Your afforditNOW Finance Application"
 
 CACHE_BUST_HASH_SOURCE="VERSION.md"
+
+PCA_KEY="kh79-rj31-an17-mu82"
