--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
+        "laravel/framework": "5.2.*",
         "zizaco/entrust": "1.4.*",
         "laravel/homestead": "^2.1",
         "appzcoder/crud-generator": "dev-master",
@@ -27,7 +27,9 @@
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "scrutinizer/ocular": "~1.1",
-        "doctrine/dbal": "~2.4"
+        "doctrine/dbal": "~2.4",
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "symfony/css-selector": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
@@ -45,15 +47,13 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize",
             "php artisan tag:save",
             "bash scripts/post-install.sh"
         ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ],
         "post-root-package-install": [
