--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "league/csv": "^7.1",
         "paybreak/paybreak-sdk-php": "^4.0",
         "paybreak/foundation": "~0.11",
-        "flynsarmy/db-blade-compiler": "~2.0"
+        "flynsarmy/db-blade-compiler": "~2.0",
+        "laravelcollective/html": "~5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
