--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6",
         "laravel/framework": "5.2.*",
         "zizaco/entrust": "1.4.*",
         "laravel/homestead": "^2.1",
-        "appzcoder/crud-generator": "dev-master",
         "guzzlehttp/guzzle": "^6.0",
         "wnowicki/generic": "~0.0",
         "erusev/parsedown": "^1.5",
@@ -25,12 +24,12 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.0",
         "phpspec/phpspec": "~2.1",
         "scrutinizer/ocular": "~1.1",
         "doctrine/dbal": "~2.4",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
-        "symfony/css-selector": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "~3.0",
+        "symfony/css-selector": "3.0"
     },
     "autoload": {
         "classmap": [
@@ -65,12 +64,6 @@
         ],
         "test": "phpunit"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/PayBreak/crud-generator"
-        }
-    ],
     "config": {
         "preferred-install": "dist"
     }
