Move unit tests to codeceptions unit folder

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/TestCase.php"
+            "tests/unit/TestCase.php"
         ]
     },
     "scripts": {
