--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "post-create-project-cmd": [
             "php artisan key:generate"
         ],
-        "test": "phpunit"
+        "test": "codecept run"
     },
     "config": {
         "preferred-install": "dist"
