--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         ],
         "psr-4": {
             "App\\": "app/",
+            "Tests\\": "tests/",
             "Bootstrap\\": "bootstrap/"
         }
     },
