--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6",
-        "laravel/framework": "5.2.*",
+        "laravel/framework": "5.3.*",
         "zizaco/entrust": "1.4.*",
         "laravel/homestead": "^2.1",
         "guzzlehttp/guzzle": "^6.0",
@@ -27,8 +27,8 @@
         "phpunit/phpunit": "~5.0",
         "scrutinizer/ocular": "~1.1",
         "doctrine/dbal": "~2.4",
-        "symfony/dom-crawler": "~3.0",
-        "symfony/css-selector": "~3.0",
+        "symfony/dom-crawler": "3.1.*",
+        "symfony/css-selector": "3.1.*",
         "codeception/codeception": "^2.3"
     },
     "autoload": {
