--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "zizaco/entrust": "1.4.*",
         "laravel/homestead": "^2.1",
         "guzzlehttp/guzzle": "^6.0",
@@ -19,16 +19,15 @@
         "paybreak/paybreak-sdk-php": "^4.0",
         "paybreak/foundation": "~0.11",
         "flynsarmy/db-blade-compiler": "~2.0",
-        "laravelcollective/html": "~5.3"
+        "laravelcollective/html": "~5.3",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~5.7",
         "scrutinizer/ocular": "~1.1",
         "doctrine/dbal": "~2.4",
-        "symfony/dom-crawler": "3.1.*",
-        "symfony/css-selector": "3.1.*",
         "codeception/codeception": "^2.3",
         "laravel/browser-kit-testing": "^1.0"
     },
