--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "league/csv": "^8.0",
         "paybreak/paybreak-sdk-php": "^4.0",
         "paybreak/foundation": "~0.11",
-        "flynsarmy/db-blade-compiler": "~2.0",
+        "flynsarmy/db-blade-compiler": "^5.4",
         "laravelcollective/html": "~5.3",
         "laravel/tinker": "~1.0"
     },
