Laravel 5.3 backwards compatible tests

--- a/.env.testing
+++ b/.env.testing
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=ao5hYvUNFr7g0J841xavRqxTPXUd0iZT
 
 DB_HOST=localhost
-DB_DATABASE=homestead
+DB_DATABASE=':memory:'
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 DB_CONNECTION=sqlite
@@ -34,4 +34,4 @@ EMAIL_TEMPLATE_DEFAULT_REPLY_TO="dev@paybreak.com"
 EMAIL_TEMPLATE_DEFAULT_FROM_NAME="afforditNOW Finance"
 EMAIL_TEMPLATE_DEFAULT_SUBJECT="Your afforditNOW Finance Application"
 
-CACHE_BUST_HASH_SOURCE="VERSION.md"
+CACHE_BUST_HASH_SOURCE="basket/VERSION.md"
