Add a log handler so log messages skip stdout

--- a/.env.testing
+++ b/.env.testing
@@ -27,7 +27,7 @@ BASKET_PROVIDER_URL=http://httpbin.org/
 ENV_BANNER=true
 
 LOG_PREFIX="BasketLog"
-LOG_SYSLOG=false
+LOG_SYSLOG=true
 LOG_FILE=false
 
 EMAIL_TEMPLATE_DEFAULT_REPLY_TO="dev@paybreak.com"
