Environment variables improvements

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+APP_NAME='afforditNOW Retailer Back Office'
+APP_URL='https://retailer-dev.paybreak.com'
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=ao5hYvUNFr7g0J841xavRqxTPXUd0iZT
