--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ MAIL_ENCRYPTION=null
 MAIL_FROM=basket@paybreak.com
 MAIL_FROM_NAME="Basket System"
 
+# VIEW_PAGINATION_COUNT=15
+
 BASKET_PROVIDER_URL=https://merchant-api-dev.paybreak.com/
 
 # ENV_BANNER_TEXT="This is a test site"
