--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
 env:
   global:
     - setup=basic
-    - CACHE_BUST_HASH_SOURCE=composer.lock
+    - CACHE_BUST_HASH_SOURCE=./../../../composer.lock
 
 sudo: false
 
