--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "moment": "^2.17.1",
+    "vue": "^2.1.10",
+    "vue-events": "^3.0.0",
+    "vuetable-2": "^1.2.0",
+    "accounting": "^0.4.1"
   }
 }
