--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "paybreak/foundation": "~0.11",
         "flynsarmy/db-blade-compiler": "^5.4",
         "laravelcollective/html": "~5.4",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
